Fixed arduino version fix.
Added export on TZ to enforce UTC in compile macros.

--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -3,10 +3,11 @@
 #
 
 # system configuration.  Arduino.mk does not seem to get the
-# Arduino version right.
+# arduino version right.  See
+# https://github.com/sudar/Arduino-Makefile/issues/624.
 ARDUINO_DIR :=		/usr/share/arduino
 ARDUINO_VERSION :=	$(shell cat $(ARDUINO_DIR)/lib/version.txt | \
-			        sed 's/^[0-9]://;s/\.\([0-9]\)\([^0-9]\)/.0\1\2/g;s/\.//g;s/\+.*//')
+			        sed 's/^[0-9]://;s/\.\([0-9]\)\>/.0\1/g;s/\.//g;s/\+.*$$//')
 AVR_TOOLS_PATH :=	/bin
 AVRDUDE_CONF :=		/etc/avrdude.conf
 
@@ -14,9 +15,9 @@ AVRDUDE_CONF :=		/etc/avrdude.conf
 BOARD_TAG :=		nano
 BOARD_SUB :=		atmega328
 
-# sketch configuration.  Must specify these explicitly since the
-# automatic library detection of Arduino.mk does not work
-# reliably.
+# sketch configuration.  Must specify the arduino libraries
+# explicitly since the automatic library detection of Arduino.mk
+# does not work reliably.
 USER_LIB_PATH :=	$(realpath ../../libraries)
 ARDUINO_LIBS :=					\
 			Adafruit_BusIO		\
@@ -28,7 +29,10 @@ ARDUINO_LIBS :=					\
 			SdFat			\
 			Wire
 
-# commandline configuration
-CPPFLAGS += $(USER_DEFINES)
+# provide a hook for specifying defines on the commandline
+CPPFLAGS +=		$(USER_DEFINES)
+
+# let macros "__DATE__" and "__TIME__" expand to UTC
+export TZ =		UTC
 
 include $(ARDUINO_DIR)/Arduino.mk
