Added restart detection.
Extended sensor reading to not immediately fail on invalid
values.

Extended LCD code to show setup time during start-up.

Fixed error reporting for SD card error.

--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -22,6 +22,7 @@ USER_LIB_PATH :=	$(realpath ../../libraries)
 ARDUINO_LIBS :=					\
 			Adafruit_BusIO		\
 			DallasTemperature	\
+			EEPROM			\
 			NewliquidCrystal	\
 			OneWire			\
 			RTClib			\
