Replaced upload counter magic by tracked uploads.

--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -18,6 +18,7 @@ BOARD_SUB :=		atmega328
 # sketch configuration.  Specify the arduino libraries explicitly
 # since the automatic library detection of Arduino.mk does not
 # work reliably.
+TARGET :=		solarcontrol
 USER_LIB_PATH :=	$(realpath ../../libraries)
 ARDUINO_LIBS :=					\
 			Adafruit_BusIO		\
@@ -29,13 +30,13 @@ ARDUINO_LIBS :=					\
 			SPI			\
 			SdFat			\
 			Wire
+ARDUINO_QUIET :=	1
 
-# upload counter magic.  Ensure every upload is done with a
-# unique upload number, which will be written to the EEPROM by
-# the sketch.
-UPLOAD_COUNTER_FILE :=	upload.cnt
-UPLOAD_COUNTER :=	$(shell cat $(UPLOAD_COUNTER_FILE) 2>/dev/null || echo 0)
-
+# upload counter magic.  Tracks uploads in the upload directory
+# and provides a unique upload counter at sketch compile time.
+UPLOAD_DIR :=		uploads
+UPLOAD_COUNTER :=	$(shell ls -vd "$(UPLOAD_DIR)/$(TARGET)".* 2>/dev/null | \
+			        awk -F . '{ uc = $$NF + 1 } END { print uc + 0 }')
 CPPFLAGS +=		-DUPLOAD_COUNTER=$(UPLOAD_COUNTER)
 
 # enable SD card CRC checking for SPI
@@ -49,22 +50,22 @@ export TZ :=		UTC
 
 include $(ARDUINO_DIR)/Arduino.mk
 
-# extend target "upload" by a test whether the internal upload
-# counter variable is set.  This effectively blocks regular "make
-# upload" from Arduino.mk.
-upload:			test_upload_counter
+# extend target "upload" by a test whether the upload is tracked.
+# This effectively blocks regular "make upload" from Arduino.mk.
+upload:			test_untracked_upload
 
-.PHONY:			test_upload_counter
-test_upload_counter:
-			@if test -z "$(UPLOAD_COUNTER_0)"; then			\
-			  echo "Cannot upload without upload counter." 1>&2;	\
-			  echo "Use target \"cupload\" instead." 1>&2;		\
+.PHONY:			test_untracked_upload
+test_untracked_upload:
+			@if test -z "$(TRACKED_UPLOAD)"; then			\
+			  echo -n "Cannot process untracked upload.  " 1>&2;	\
+			  echo    "Use target \"tupload\" instead." 1>&2;	\
 			  exit 1;						\
 			fi
 
-# make a "counted upload", which is a regular upload with the
-# upload counter being incremented after successfull upload
-.PHONY:			cupload
-cupload:
-			$(MAKE) UPLOAD_COUNTER_0=$(UPLOAD_COUNTER) upload
-			@echo "$$(( $(UPLOAD_COUNTER) + 1 ))" > $(UPLOAD_COUNTER_FILE)
+# make a "tracked upload", which is a regular upload with the
+# uploaded sketch being saved to the upload directory
+.PHONY:			tupload
+tupload:
+			$(MAKE) TRACKED_UPLOAD=1 upload
+			mkdir -p $(UPLOAD_DIR)/$(TARGET).$(UPLOAD_COUNTER)
+			cp $(LOCAL_INO_SRCS) $(UPLOAD_DIR)/$(TARGET).$(UPLOAD_COUNTER)
